# cauldron

./: CHANGELOG.md  README.md  TODO.md  cabal.project  cauldron.cabal  flake.nix  magic-cauldron.cabal  pretty-error-examples.md
.github/: copilot-instructions.md
.github/workflows/: haskell-ci.yml
app/: Main.hs
lib/: Cauldron.hs
lib-graph/Cauldron/: Graph.hs
lib-graph/Cauldron/Graph/: Algorithm.hs  Export.hs
lib-graph/Cauldron/Graph/Export/: Dot.hs
lib/Cauldron/: Args.hs  Beans.hs  Builder.hs  Constructor.hs  Managed.hs
lib/Cauldron/Args/: Internal.hs
src/: MagicCauldron.hs
test/: appTests.hs  argsTests.hs  codecTests.hs  constructorTests.hs  managedTests.hs  tests.hs
