cabal-version:      3.4
name:               cauldron
version:            0.3.0.0
synopsis:           Toy dependency injection framework
description:        Toy dependency injection framework that wires things at runtime.
license:            BSD-3-Clause
license-file:       LICENSE
author:             diaz_carrete@yahoo.com
maintainer:         Daniel Díaz
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:
category: Dependency Injection
tested-with: GHC ==9.8.1 || ==9.6.3
source-repository    head
    type:     git
    location: https://github.com/danidiaz/cauldron.git

common common
    build-depends:
        base >= 4.18.0 && < 5,
    ghc-options: -Wall
    default-language: GHC2021

common common-tests
    import: common
    build-depends:
      tasty           ^>= 1.5,
      tasty-hunit     ^>= 0.10,
      containers >= 0.5.0 && < 0.7,
      text >= 2.0 && < 2.2,
      transformers >= 0.5 && < 0.7,
      cauldron,
    ghc-options: -Wall
    default-language: GHC2021

library
    import:           common
    exposed-modules:  Cauldron
    build-depends:
        algebraic-graphs ^>= 0.7,
        multicurryable ^>= 0.1.1.0,
        containers >= 0.5.0 && < 0.7,
        bytestring >= 0.10.0 && < 0.13,
        sop-core >= 0.5.0 && < 0.6,
        text >= 2.0 && < 2.2,
    hs-source-dirs:   lib

executable cauldron-example-wiring
    import:           common
    main-is:          Main.hs
    build-depends:
        cauldron,

    hs-source-dirs:   app

test-suite tests
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          tests.hs

test-suite app-tests
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          appTests.hs

test-suite tests-managed
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          managedTests.hs

