cabal-version:      3.4
name:               cauldron
version:            0.9.0.0
synopsis:           Dependency injection library
description:        Dependency injection library that wires things at runtime.
license:            BSD-3-Clause
license-file:       LICENSE
author:             diaz_carrete@yahoo.com
maintainer:         Daniel Díaz
-- copyright:
build-type:         Simple
extra-doc-files:    README.md, CHANGELOG.md
-- extra-source-files:
category: Dependency Injection
tested-with: GHC ==9.10.1
source-repository    head
    type:     git
    location: https://github.com/danidiaz/cauldron.git

common common-base
    build-depends:
        base >= 4.18.0 && < 5,
    ghc-options: -Wall
    default-language: GHC2021

common common-lib
    import: common-base
    build-depends:
      containers >= 0.7 && < 0.9,

common common-tests
    import: common-lib
    build-depends:
      tasty           ^>= 1.5,
      tasty-hunit     ^>= 0.10,
      transformers >= 0.5 && < 0.7,
      cauldron,
      cauldron:graph,

library
    import:           common-lib
    build-depends:
        cauldron:graph,
    hs-source-dirs:   lib
    exposed-modules:  
        Cauldron
        Cauldron.Beans
        Cauldron.Args
        Cauldron.Managed
        Cauldron.Builder
    other-modules:
        Cauldron.Args.Internal

library graph
    import:           common-lib
    hs-source-dirs:   lib-graph
    exposed-modules:  
        Cauldron.Graph
        Cauldron.Graph.Algorithm
        Cauldron.Graph.Export
        Cauldron.Graph.Export.Dot
    visibility: public

executable cauldron-example-wiring
    import:           common-base
    main-is:          Main.hs
    build-depends:
        cauldron,

    hs-source-dirs:   app

test-suite tests
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          tests.hs

test-suite codec-tests
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          codecTests.hs

test-suite app-tests
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          appTests.hs

test-suite tests-managed
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          managedTests.hs

test-suite tests-args
    import:           common-tests
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          argsTests.hs